[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/book/LendDialog.gd" type="Script" id=1]
[ext_resource path="res://ui/SpinBoxTr.gd" type="Script" id=2]
[ext_resource path="res://ui/ThemeProperty.gd" type="Script" id=3]
[ext_resource path="res://ui/user/User.gd" type="Script" id=4]

[node name="LendDialog" type="ConfirmationDialog" groups=[
"LendDialog",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -237.0
margin_top = -104.0
margin_right = 237.0
margin_bottom = 106.0
popup_exclusive = true
window_title = ""
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -42.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="VBoxContainer" parent="Box"]
margin_right = 458.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="Box/User"]
margin_right = 458.0
margin_bottom = 26.0
text = ".user"

[node name="Search" type="LineEdit" parent="Box/User"]
margin_top = 30.0
margin_right = 458.0
margin_bottom = 56.0
placeholder_text = ".user.account"

[node name="Popup" type="PopupMenu" parent="Box/User/Search"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.0
margin_top = -34.0
margin_right = 229.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolButton" type="ToolButton" parent="Box/User/Search"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_class = "EditorIcons"
theme_name = "Search"
theme_type = 2
target_property = "icon"

[node name="State" type="Label" parent="Box/User"]
margin_top = 60.0
margin_right = 458.0
margin_bottom = 86.0
text = "-"

[node name="AddUser" type="VBoxContainer" parent="Box"]
visible = false
margin_top = 84.0
margin_right = 458.0
margin_bottom = 158.0
script = ExtResource( 4 )
editable = true
account_path = NodePath("Account/Account")
forename_path = NodePath("Name/Forename")
surname_path = NodePath("Name/Surname")
role_path = NodePath("Role")
user_request = NodePath("Account/Request")

[node name="Account" type="HBoxContainer" parent="Box/AddUser"]
margin_right = 458.0
margin_bottom = 22.0

[node name="Account" type="LineEdit" parent="Box/AddUser/Account"]
margin_right = 442.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = ".user.account"

[node name="Request" type="Button" parent="Box/AddUser/Account"]
margin_left = 446.0
margin_right = 458.0
margin_bottom = 22.0
script = ExtResource( 3 )
theme_class = "EditorIcons"
theme_name = "AssetLib"
theme_type = 2
target_property = "icon"

[node name="Name" type="HBoxContainer" parent="Box/AddUser"]
margin_top = 26.0
margin_right = 458.0
margin_bottom = 48.0

[node name="Forename" type="LineEdit" parent="Box/AddUser/Name"]
margin_right = 227.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = ".user.forename"

[node name="Surname" type="LineEdit" parent="Box/AddUser/Name"]
margin_left = 231.0
margin_right = 458.0
margin_bottom = 22.0
size_flags_horizontal = 3
placeholder_text = ".user.surname"

[node name="Role" type="LineEdit" parent="Box/AddUser"]
margin_top = 52.0
margin_right = 458.0
margin_bottom = 74.0
placeholder_text = ".user.role"

[node name="Period" type="VBoxContainer" parent="Box"]
margin_top = 96.0
margin_right = 458.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="Box/Period"]
margin_right = 458.0
margin_bottom = 26.0
text = ".book.lend.period"

[node name="Days" type="SpinBox" parent="Box/Period"]
margin_top = 30.0
margin_right = 458.0
margin_bottom = 56.0
min_value = 1.0
max_value = 30.0
value = 14.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = ".book.period.days"
script = ExtResource( 2 )

[node name="State" type="Label" parent="Box"]
margin_top = 162.0
margin_right = 458.0
margin_bottom = 188.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_class = "Editor"
theme_name = "error_color"
target_property = "custom_colors/font_color"
[connection signal="text_entered" from="Box/User/Search" to="." method="_on_user_input_entered"]
[connection signal="index_pressed" from="Box/User/Search/Popup" to="." method="_on_user_selected"]
[connection signal="pressed" from="Box/User/Search/ToolButton" to="." method="_on_user_input_entered" binds= [ "" ]]
[connection signal="text_entered" from="Box/AddUser/Account/Account" to="Box/AddUser" method="_on_request"]
[connection signal="pressed" from="Box/AddUser/Account/Request" to="Box/AddUser" method="_on_request"]
